frontend/test/should_fail/keepOneForEach_unknown_accumulation_entity.grg
test t
{
---
	def var i:int;
	def var j:int;
} \ keepOneForEach<i>Accumulate<k>By<sum>
